inherit pom from kc_project
git-svn-id: https://test.kuali.org/svn/kc_custom@6 a578e0f6-39cc-11df-8f19-f11d9bd56c3b